fix button alignment

--- a/css/main.css
+++ b/css/main.css
@@ -1,8 +1,26 @@
 html, body, .container {
 	min-width: 400px;
 	width: auto!important;
-	height: 100%;
 	background-color: #0E0B16; /* Void */
+}
+
+html {
+	position: relative;
+	min-height: 100%;
+}
+
+body {
+	margin-bottom: 60px;
+}
+
+.footer {
+	position: absolute;
+	bottom: 0;
+	/*width: 100%;*/
+	height: 60px; /* Set the fixed height of the footer here */
+	line-height: 60px; /* Vertically center the text there */
+	/*background-color: #f5f5f5;*/
+	color: rgba(255, 255, 255, 0.6);
 }
 
 #date, #time {
@@ -94,6 +112,17 @@ textarea {
 .btn:hover {
 	color: #E7DFDD; /* Stark */
 	background-color: #A238CA; /* Fuschia */
+}
+
+.btn-custom {
+	background: none;
+    float: right;
+    padding: 1px 0 1px 0;
+    border: none;
+}
+
+#check {
+	padding-top: 3px;
 }
 
 /************************************************/
